# aiml-exercises

./: LICENSE.txt  README.md  pyproject.toml
notebooks/: BI_SPAM_CLASS.ipynb  training-spam-classifier.ipynb
src/aimlexercies/: __about__.py
src/aimlexercies/utils/: model_io.py
tests/: __init__.py
