[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimlexercies"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "alamshc", email = "sheikh.alam@novartis.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas==2.2.3"
  ]

[project.urls]
Documentation = "https://github.com/alamshc/aimlexercies#readme"
Issues = "https://github.com/alamshc/aimlexercies/issues"
Source = "https://github.com/alamshc/aimlexercies"

[tool.hatch.version]
path = "src/aimlexercies/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aimlexercies tests}"

[tool.coverage.run]
source_pkgs = ["aimlexercies", "tests"]
branch = true
parallel = true
omit = [
  "src/aimlexercies/__about__.py",
]

[tool.coverage.paths]
aimlexercies = ["src/aimlexercies", "*/aimlexercies/src/aimlexercies"]
tests = ["tests", "*/aimlexercies/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
